<resources>
    <string name="appname">Calculator</string>
    <string name="num1_input"> Input 1st Number</string>
    <string name="num2_input"> Input 2nd Number</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="divide">÷</string>
    <string name="result">Result =</string>
    <string name="my_id">610821306</string>
    <string name="numb1">Num 1 =</string>
    <string name="numb2">Num 2 =</string>

</resources>